--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,9 @@ buildscript {
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile fileTree(include: '*.jar', dir: 'libs')
+
+    compile 'com.android.support:recyclerview-v7:24.0.0'
 }
 
 android {
